--- a/css/style.css
+++ b/css/style.css
@@ -135,8 +135,11 @@ body{
     overflow: hidden;
 }
 .session-info-menu{
-    flex-grow: 3;
+    flex-grow: 4;
     overflow: hidden;
+}
+.session-info-menu li{
+    cursor: pointer;
 }
 .session-buttom-menu{
     flex-grow: 1;
@@ -240,21 +243,6 @@ ul>li{
 }
 
 
-@media (min-width: 576px){
-    .container {
-        max-width: 540px;
-    }
-}
-@media (min-width: 768px){
-    .container {
-        max-width: 720px;
-    }
-}
-@media (min-width: 992px){
-    .container {
-        max-width: 960px;
-    }
-}
 @media (min-width: 1200px){
     .container {
         max-width: 1140px;
