--- a/css/style.css
+++ b/css/style.css
@@ -463,6 +463,12 @@ i{
     padding: 0 20px;
 }
 
+.about-CV{
+    margin-top: 30px;
+    padding: 20px;
+    border-bottom: 1px outset #E5FB6F;
+}
+
 /* About end */
 
 .title-wrap {
